--- a/Makefile.in
+++ b/Makefile.in
@@ -19,6 +19,12 @@ librustgeom.dummy: geom.rc $(RUST_SRC)
 	$(RUSTC) $(RUSTFLAGS) $< -o $@
 	touch $@
 
+rustgeom-test: geom.rc $(RUST_SRC)
+	$(RUSTC) $(RUSTFLAGS) $< -o $@ --test
+
+check: rustgeom-test
+	./rustgeom-test
+
 .PHONY: clean
 clean:
 	rm -f *.o *.a *.so *.dylib *.dll *.dummy
