'make check' should remove test products.

--- a/Makefile.in
+++ b/Makefile.in
@@ -27,5 +27,5 @@ check: rustgeom-test
 
 .PHONY: clean
 clean:
-	rm -f *.o *.a *.so *.dylib *.dll *.dummy
+	rm -f *.o *.a *.so *.dylib *.dll *.dummy *-test
 
