--- a/geom.rc
+++ b/geom.rc
@@ -10,4 +10,8 @@ pub mod point;
 pub mod rect;
 pub mod size;
 
-
+pub use matrix::Matrix4;
+pub use matrix2d::Matrix2D;
+pub use point::Point2D;
+pub use rect::Rect;
+pub use size::Size2D;
