--- a/geom.rc
+++ b/geom.rc
@@ -17,10 +17,13 @@ pub use matrix::Matrix4;
 pub use matrix2d::Matrix2D;
 pub use point::Point2D;
 pub use rect::Rect;
+pub use side_offsets::SideOffsets2D;
 pub use size::Size2D;
 
 pub mod matrix;
 pub mod matrix2d;
 pub mod point;
 pub mod rect;
+pub mod side_offsets;
 pub mod size;
+
