--- a/Makefile.in
+++ b/Makefile.in
@@ -3,16 +3,16 @@ VPATH=%VPATH%
 RUSTC ?= rustc
 RUSTFLAGS ?=
 
-RUST_SRC=$(shell find $(VPATH)/. -type f -name '*.rs')
+RUST_SRC=$(shell find $(VPATH)/src -type f -name '*.rs')
 
 .PHONY: all
 all:    libgeom.dummy
 
-libgeom.dummy: lib.rs $(RUST_SRC)
+libgeom.dummy: src/lib.rs $(RUST_SRC)
 	$(RUSTC) $(RUSTFLAGS) $< --out-dir .
 	touch $@
 
-geom-test: lib.rs $(RUST_SRC)
+geom-test: src/lib.rs $(RUST_SRC)
 	$(RUSTC) $(RUSTFLAGS) $< -o $@ --test
 
 .PHONY: check
