--- a/Makefile.in
+++ b/Makefile.in
@@ -2,6 +2,9 @@ VPATH=%VPATH%
 
 RUSTC ?= rustc
 RUSTFLAGS ?=
+RUSTDOC ?= rustdoc
+RUSTDOC_FLAGS ?=
+RUSTDOC_TARGET ?= doc
 
 RUST_SRC=$(shell find $(VPATH)/src -type f -name '*.rs')
 
@@ -14,6 +17,12 @@ libgeom.dummy: src/lib.rs $(RUST_SRC)
 
 geom-test: src/lib.rs $(RUST_SRC)
 	$(RUSTC) $(RUSTFLAGS) $< -o $@ --test
+
+.PHONY: doc
+doc: $(RUSTDOC_TARGET)/geom/index.html
+
+$(RUSTDOC_TARGET)/geom/index.html: lib.rs $(RUST_SRC)
+	$(RUSTDOC) $(RUSTDOC_FLAGS) $< -o $(RUSTDOC_TARGET)
 
 .PHONY: check
 check: geom-test
