--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "euclid"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["The Servo Project Developers"]
 description = "Geometry primitives"
 documentation = "http://doc.servo.org/euclid/"
+repository = "https://github.com/servo/euclid"
 license = "MIT / Apache-2.0"
 
 [dependencies]
