Make it work with the current version of heapsize.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,7 @@ serde = "*"
 serde_macros = "*"
 
 [dependencies.heapsize]
-#version = "0.1.1"
-path = "../heapsize"
+version = "0.1.1"
 optional = true
 
 [dependencies.heapsize_plugin]
