--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT / Apache-2.0"
 [features]
 default = []
 plugins = ["serde", "serde_macros", "heapsize", "heapsize_plugin"]
+rustc_stable = []
 
 [dependencies]
 rustc-serialize = "0.3.2"
@@ -26,4 +27,3 @@ optional = true
 [dependencies.heapsize_plugin]
 version = "0.1.0"
 optional = true
-
