Introduce an 'unstable' feature to allow building on stable (fixes #116, fixes #117).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT / Apache-2.0"
 [features]
 default = []
 plugins = ["serde", "serde_macros", "heapsize", "heapsize_plugin"]
+unstable = []
 
 [dependencies]
 rustc-serialize = "0.3.2"
