--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "euclid"
-version = "0.6.3"
+version = "0.6.4"
 authors = ["The Servo Project Developers"]
 description = "Geometry primitives"
 documentation = "http://doc.servo.org/euclid/"
@@ -16,8 +16,8 @@ unstable = []
 rustc-serialize = "0.3.2"
 num = {version = "0.1.24", default-features = false}
 log = "0.3.1"
-serde = {version = "0.7", optional = true}
-serde_macros = {version = "0.7", optional = true}
+serde = {version = ">=0.6, <0.8", optional = true}
+serde_macros = {version = ">=0.6, <0.8", optional = true}
 
 [dependencies.heapsize]
 version = ">=0.2, <0.4"
