--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ unstable = []
 
 [dependencies]
 rustc-serialize = "0.3.2"
-num = {version = "0.1.24", default-features = false}
+num-traits = {version = "0.1.32", default-features = false}
 log = "0.3.1"
 serde = {version = ">=0.6, <0.8", optional = true}
 serde_macros = {version = ">=0.6, <0.8", optional = true}
