--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ plugins = []
 unstable = []
 
 [dependencies]
-heapsize = ">=0.2, <0.4"
+heapsize = "0.3"
 rustc-serialize = "0.3.2"
 num-traits = {version = "0.1.32", default-features = false}
 log = "0.3.1"
