--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "euclid"
 version = "0.11.0"
 authors = ["The Servo Project Developers"]
 description = "Geometry primitives"
-documentation = "http://doc.servo.org/euclid/"
+documentation = "https://docs.rs/euclid/"
 repository = "https://github.com/servo/euclid"
 license = "MIT / Apache-2.0"
 
