--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,17 @@
 language: rust
-rust:
-  - 1.17.0
-  - stable
-  - beta
-  - nightly
 
 notifications:
   webhooks: http://build.servo.org:54856/travis
 
 matrix:
   include:
+    - rust: 1.21.0
     - rust: stable
-      env: FEATURES=""
     - rust: beta
-      env: FEATURES=""
     - rust: nightly
-      env: FEATURES=""
     - rust: nightly
-      env: FEATURES="unstable"
+      env: FEATURES="--features unstable"
 
 script:
-  - cargo build --verbose --features "$FEATURES"
-  - cargo test --verbose --features "$FEATURES"
+  - cargo build $FEATURES
+  - cargo test --verbose $FEATURES
