--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ unstable = []
 
 [dependencies]
 num-traits = {version = "0.1.32", default-features = false}
-serde = { version = "1.0", features = ["serde_derive"] }
+serde = { version = "1.0", features = ["serde_derive"], optional = true }
 
 [dev-dependencies]
 rand = "0.3.7"
