--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ unstable = []
 [dependencies]
 num-traits = {version = "0.1.32", default-features = false}
 log = "0.3.1"
-serde = "1.0"
+serde = { version = "1.0", features = ["serde_derive"] }
 
 [dev-dependencies]
 rand = "0.3.7"
