Update to mint 0.5.1.
The only real difference is changing `From<mint::RowMatrix2x3> for
TypedTransform2D` to `From<mint::RowMatrix3x2>`.  This may or may
not be 100% valid since my understanding of the math and how it all
fits together isn't GREAT, but...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ unstable = []
 [dependencies]
 num-traits = { version = "0.2" }
 serde = { version = "1.0", features = ["serde_derive"], optional = true }
-mint = {version = "0.4", optional = true}
+mint = {version = "^0.5.1", optional = true}
 
 [dev-dependencies]
 rand = "0.4"
