--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,13 @@ categories = ["science"]
 license = "MIT / Apache-2.0"
 
 [features]
+minted = ["mint"]
 unstable = []
 
 [dependencies]
 num-traits = { version = "0.2" }
 serde = { version = "1.0", features = ["serde_derive"], optional = true }
+mint = {version = "0.5", optional = true}
 
 [dev-dependencies]
 rand = "0.4"
