--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "euclid"
-version = "0.19.0"
+version = "0.19.1"
 authors = ["The Servo Project Developers"]
 description = "Geometry primitives"
 documentation = "https://docs.rs/euclid/"
@@ -15,6 +15,7 @@ unstable = []
 [dependencies]
 num-traits = { version = "0.2" }
 serde = { version = "1.0", features = ["serde_derive"], optional = true }
+mint = {version = "0.5.1", optional = true}
 
 [dev-dependencies]
 rand = "0.4"
