--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT / Apache-2.0"
 unstable = []
 
 [dependencies]
+euclid_macros = { path = "./macros", version = "0.1" }
 num-traits = { version = "0.2" }
 serde = { version = "1.0", features = ["serde_derive"], optional = true }
 mint = {version = "0.5.1", optional = true}
