macros: Add style_derive's dependencies, and move the crate up a directory.

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["Emilio Cobos Álvarez <emilio@crisal.io>", "The Servo project developers"]
 
 [lib]
+path = "lib.rs"
 proc-macro = true
 
 [dependencies]
+darling = "0.8"
+proc-macro2 = "0.4"
+quote = "0.6"
+syn = { version = "0.15", features = ["visit"] }
+synstructure = "0.10"
