macros: Add description and use the same license as euclid.
I thought euclid was mpl but it's not.

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -2,6 +2,8 @@
 name = "euclid_macros"
 version = "0.1.0"
 authors = ["Emilio Cobos Álvarez <emilio@crisal.io>", "The Servo project developers"]
+description = "Euclid implementation detail"
+license = "MIT / Apache-2.0"
 
 [lib]
 path = "lib.rs"
