Implement actual support for no_std
With num-traits having recently gained full support for no_std by using
the libm crate, this crate can now fully support no_std as well without
any sacrifices.

Currently num-traits has not released a new version yet, so this uses a
git dependency until then.

Additionally the tests should fail at the moment when using the libm, as
there actually was a bug in libm that I have created a PR for.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ rust:
 env:
   - FEATURES=""
   - FEATURES="--features serde"
+  - FEATURES="--no-default-features --features libm"
 
 matrix:
   include:
