--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ std = ["num-traits/std"]
 libm = ["num-traits/libm"]
 
 [dependencies]
-num-traits = { git = "https://github.com/rust-num/num-traits", default-features = false }
+num-traits = { version = "0.2.10", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
 mint = {version = "0.5.1", optional = true}
 
