--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ libm = ["num-traits/libm"]
 num-traits = { version = "0.2.10", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
 mint = {version = "0.5.1", optional = true}
+arbitrary = { version = "1", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 serde_test = "1.0"
