Optionally implement bytemuck Zeroable and Pod on all types.
Pod is very useful when interacting with GPU APIs like wgpu as it is the de-facto standard way to express that a piece of data is safe to put into GPU buffers.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,9 @@ jobs:
         env:
           RUST_BACKTRACE: 1
 
+      - name: bytemuck
+        run: cargo check --features bytemuck
+
   build_result:
     name: homu build finished
     runs-on: ubuntu-latest
