--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ num-traits = { version = "0.2.10", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
 mint = {version = "0.5.1", optional = true}
 arbitrary = { version = "1", optional = true, features = ["derive"] }
+bytemuck = { version = "1.9", optional = true }
 
 [dev-dependencies]
 serde_test = "1.0"
