--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,18 +12,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        features: ["", "--features serde", "--no-default-features --features libm"]
+        features: ["", "--features serde"]
         version: ["1.34.0", "stable", "beta", "nightly"]
         include:
           - version: stable
             features: --features mint
+          - version: stable
+            features: --no-default-features --features libm
           - version: nightly
             features: --features unstable
           - version: nightly
             features: --features unstable,serde
         
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Install nightly toolchain
         uses: actions-rs/toolchain@v1
