--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         features: ["", "--features serde", "--no-default-features --features libm"]
-        version: ["1.34.0", "stable", "beta", "nightly"]
+        version: ["1.56.0", "stable", "beta", "nightly"]
         include:
           - version: stable
             features: --features mint
@@ -23,14 +23,12 @@ jobs:
             features: --features unstable,serde
         
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Install nightly toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Install toolchain
+        uses: dtolnay/rust-toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ matrix.version }}
-          override: true
 
       - name: Cargo build
         run: cargo build ${{ matrix.features }}
