--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "https://docs.rs/euclid/"
 repository = "https://github.com/servo/euclid"
 keywords = ["matrix", "vector", "linear-algebra", "geometry"]
 categories = ["science"]
-license = "MIT / Apache-2.0"
+license = "MIT OR Apache-2.0"
 
 [features]
 default = ["std"]
@@ -19,7 +19,7 @@ libm = ["num-traits/libm"]
 [dependencies]
 num-traits = { version = "0.2.15", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
-mint = {version = "0.5.1", optional = true}
+mint = { version = "0.5.1", optional = true }
 arbitrary = { version = "1", optional = true, features = ["derive"] }
 bytemuck = { version = "1.9", optional = true }
 
