feat: Add `rkyv` integration
Signed-off-by: Chocolate Pie <106949016+chocolate-pie@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
           - version: stable
             features: --features arbitrary
           - version: nightly
+            features: --features rkyv
+          - version: nightly
             features: --features unstable
           - version: nightly
             features: --features unstable,serde
