--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ default = ["std"]
 unstable = []
 std = ["num-traits/std"]
 libm = ["num-traits/libm"]
+malloc_size_of = ["dep:malloc_size_of"]
 
 [dependencies]
 num-traits = { version = "0.2.15", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
+malloc_size_of = { version = "0.1", default-features = false, optional = true }
 mint = { version = "0.5.1", optional = true }
 arbitrary = { version = "1", optional = true }
 bytemuck = { version = "1.9", optional = true }
