Implement `MallocSizeOf` for `euclid` types (#541)
* Implement MallocSizeOf trait for euclid type

Signed-off-by: Nico Burns <nico@nicoburns.com>

* Add CI task for checking malloc_size_of feature

Signed-off-by: Nico Burns <nico@nicoburns.com>

* Bump version number

Signed-off-by: Nico Burns <nico@nicoburns.com>

* Remove use of dep syntax for MSRV compatibility

Signed-off-by: Nico Burns <nico@nicoburns.com>

* Bump MSRV to 1.63

Signed-off-by: Nico Burns <nico@nicoburns.com>

---------

Signed-off-by: Nico Burns <nico@nicoburns.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         features: ["", "--features serde", "--no-default-features --features libm"]
-        version: ["1.56.0", "stable", "beta", "nightly"]
+        version: ["1.63.0", "stable", "beta", "nightly"]
         include:
           - version: stable
             features: --features mint
@@ -23,6 +23,8 @@ jobs:
             features: --features bytemuck
           - version: stable
             features: --features arbitrary
+          - version: stable
+            features: --features malloc_size_of
           - version: nightly
             features: --features unstable
           - version: nightly
