--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "euclid"
-version = "0.22.11"
+version = "0.22.12"
 authors = ["The Servo Project Developers"]
 edition = "2021"
-rust-version = "1.56.0"
+rust-version = "1.63.0"
 description = "Geometry primitives"
 documentation = "https://docs.rs/euclid/"
 repository = "https://github.com/servo/euclid"
@@ -20,6 +20,7 @@ libm = ["num-traits/libm"]
 [dependencies]
 num-traits = { version = "0.2.15", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
+malloc_size_of = { version = "0.1", default-features = false, optional = true }
 mint = { version = "0.5.1", optional = true }
 arbitrary = { version = "1", optional = true }
 bytemuck = { version = "1.9", optional = true }
